modified:   static/css/accueil.css 	new file:   static/css/connexion.css 	new file:   static/css/contact.css 	new file:   static/css/footer.css 	new file:   static/css/header.css 	modified:   static/html/accueil.html 	new file:   static/html/connexion.html 	new file:   static/html/contact.html

--- a/static/html/accueil.html
+++ b/static/html/accueil.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock O' CESI</title>
     <link rel="stylesheet" href="../css/accueil.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/header.css">
+
 </head>
 <body>
     <header>
         <div class="header-container">
             <button class="header-button">Nos magasins partenaires</button>
-            <button class="header-button">Connexion</button>
+            <button class="header-button" onclick="window.location.href='connexion.html'">Connexion</button>
         </div>
     </header>
     <main>
@@ -18,9 +21,26 @@
         <p>Gérez vos stock tout au long de l’année</p>
         <button class="main-button">Gestion</button>
     </main>
+    <section>
+        <h2>Nos services</h2>
+
+        <div>
+            <h3>Gestion de stock</h3>
+            <p>Gérez vos stocks de manière efficace et simple.</p>
+        </div>
+        <div>
+            <h3>Partenaires</h3>
+            <p>Accédez à un réseau de partenaires pour vos besoins en stock.</p>
+        </div>
+        <div>
+            <h3>Support</h3>
+            <p>Notre équipe est là pour vous aider à chaque étape.</p>
+        </div>
+    
     <footer>
         <p>©Stock O’ CESI, tout droit réservé</p>
-        <a href="#" class="contact-link">Nous contacter !</a>
+        <button class="contact-link" onclick="window.location.href='contact.html'">Nous contacter !</button>
     </footer>
+    
 </body>
 </html>
