--- a/static/html/accueil.html
+++ b/static/html/accueil.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock O' CESI</title>
     <link rel="stylesheet" href="../css/accueil.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/main.css">
+    
 
 </head>
 <body>
