--- a/static/html/connexion.html
+++ b/static/html/connexion.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion - Stock O' CESI</title>
     <link rel="stylesheet" href="../css/connexion.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <header>
@@ -28,7 +29,7 @@
     </main>
     <footer>
         <p>©Stock O’ CESI, tout droit réservé</p>
-        <a href="#" class="contact-link">Nous contacter !</a>
+        <button class="contact-link" onclick="window.location.href='contact.html'">Nous contacter !</button>
     </footer>
 </body>
 </html>
