--- a/static/html/contact.html
+++ b/static/html/contact.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nous contacter - Stock O' CESI</title>
     <link rel="stylesheet" href="../css/contact.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <header>
@@ -46,9 +45,9 @@
             <button type="submit" class="main-button">Envoyer</button>
         </form>
     </main>
+    
     <footer>
         <p>©Stock O’ CESI, tout droit réservé</p>
-        <a href="#" class="contact-link">Nous contacter !</a>
     </footer>
 </body>
 </html>
