--- a/static/html/accueil.html
+++ b/static/html/accueil.html
@@ -19,7 +19,7 @@
     <main>
         <h1>Stock O’ CESI !</h1>
         <p>Gérez vos stock tout au long de l’année</p>
-        <button class="main-button">Gestion</button>
+        <button class="main-button" onclick="window.location.href='gestion.html'">Gestion</button>
     </main>
     <section>
         <h2>Nos services</h2>
@@ -40,6 +40,7 @@
     <footer>
         <p>©Stock O’ CESI, tout droit réservé</p>
         <button class="contact-link" onclick="window.location.href='contact.html'">Nous contacter !</button>
+        <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
     </footer>
     
 </body>
