modified:   static/html/ajouter_magasin.html

--- a/static/html/ajouter_magasin.html
+++ b/static/html/ajouter_magasin.html
@@ -12,7 +12,7 @@
         <div class="header-container">
             
             <button class="header-button" onclick="window.location.href='gestion.html'">Retour</button>
-            <button class="header-button" onclick="window.location.href='index.html'">Accueil</button>
+            <button class="header-button" onclick="window.location.href='accueil.html'">Accueil</button>
         </div>
     </header>
     
