modified:   static/css/main.css 	modified:   static/html/creer_compte.html 	new file:   static/html/mentions.html 	new file:   static/html/messages.html

--- a/static/html/creer_compte.html
+++ b/static/html/creer_compte.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div class="header-container">
+            <button class="header-button" onclick="window.location.href='gestion.html'">Retour</button>
             <button class="header-button" onclick="window.location.href='accueil.html'">Accueil</button>
         </div>
     </header>
