modified:   static/css/connexion.css 	modified:   static/css/main.css 	modified:   static/html/connexion.html

--- a/static/html/connexion.html
+++ b/static/html/connexion.html
@@ -30,6 +30,7 @@
     <footer>
         <p>©Stock O’ CESI, tout droit réservé</p>
         <button class="contact-link" onclick="window.location.href='contact.html'">Nous contacter !</button>
+        <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
     </footer>
 </body>
-</html>
+</html> 
