new file:   static/assets/img/logo.png 	new file:   static/assets/img/logo.svg 	modified:   static/css/contact.css 	modified:   static/css/main.css 	modified:   static/html/accueil.html 	modified:   static/html/connexion.html     modified:   static/html/gestion.html

--- a/static/html/accueil.html
+++ b/static/html/accueil.html
@@ -21,9 +21,8 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="connexion.html">Connexion</a></li>
-                        <li><a href="gestion.html">Gestion</a></li>
                         <li><a href="magasins.html">Magasins partenaires</a></li>
-                        <li><a href="journal_actions.html">Journal d'actions</a></li>
+                        <li><a href="gestion.html">Tableau de bord</a></li>
                     </ul>
                 </nav>
             </div>
