--- a/static/html/connexion.html
+++ b/static/html/connexion.html
@@ -10,9 +10,24 @@
 <body>
     <header>
         <div class="header-container">
-            <button class="header-button" onclick="window.location.href='accueil.html'">Accueil</button>
+            <div class="logo-container">
+                <img src="../assets/img/logo.png" alt="Logo de Stock O' CESI" class="logo">
+            </div>
+            
+            <div class="burger-menu">
+                <span class="burger-icon"></span>
+                <nav class="nav-menu">
+                    <ul>
+                        <li><a href="accueil.html">Accueil</a></li>
+                        <li><a href="magasins.html">Magasins partenaires</a></li>
+                        
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
+
+
     <main>
         <h1>Connexion</h1>
         <form action="#" method="post">
@@ -28,9 +43,12 @@
         </form>
     </main>
     <footer>
-        <p>©Stock O’ CESI, tout droit réservé</p>
-        <button class="contact-link" onclick="window.location.href='contact.html'">Nous contacter !</button>
-        <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
+        <p>©Stock O' CESI, tout droit réservé</p>
+        <div class="footer-links">
+            <button class="contact-link" onclick="window.location.href='contact.html'">Nous contacter !</button>
+            <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
+        </div>
     </footer>
+    <script src="../js/burger.js"></script>
 </body>
 </html> 
