modified:   static/css/ajouter_magasin.css 	modified:   static/css/creer_compte.css 	modified:   static/css/gestion.css 	modified:   static/css/main.css 	modified:   static/html/accueil.html 	modified:   static/html/ajouter_magasin.html 	modified:   static/html/contact.html 	modified:   static/html/creer_compte.html 	modified:   static/html/gestion.html 	modified:   static/html/mentions.html 	modified:   static/html/messages.html

--- a/static/html/accueil.html
+++ b/static/html/accueil.html
@@ -21,8 +21,9 @@
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="connexion.html">Connexion</a></li>
+                        
                         <li><a href="magasins.html">Magasins partenaires</a></li>
-                        <li><a href="gestion.html">Tableau de bord</a></li>
+                        <li><a href="gestion.html">Journal d'activité</a></li>
                     </ul>
                 </nav>
             </div>
