--- a/static/html/ajouter_magasin.html
+++ b/static/html/ajouter_magasin.html
@@ -10,14 +10,25 @@
 <body>
     <header>
         <div class="header-container">
+            <div class="logo-container">
+                <img src="../assets/img/logo.png" alt="Logo de Stock O' CESI" class="logo">
+            </div>
             
-            <button class="header-button" onclick="window.location.href='gestion.html'">Retour</button>
-            <button class="header-button" onclick="window.location.href='accueil.html'">Accueil</button>
+            <div class="burger-menu">
+                <span class="burger-icon"></span>
+                <nav class="nav-menu">
+                    <ul>
+                        <li><a href="accueil.html">Accueil</a></li>
+                        <li><a href="gerer_magasins.html">Gérer de magasins</a></li>
+                        <li><a href="gestion.html">Retour</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     
     <main>
-    <form>
+    <form> 
         <h1>Ajouter un magasin</h1>
             <label for="nom">Nom</label>
             <input type="text" id="nom" name="nom" placeholder="Nom du magasin" required>
@@ -41,8 +52,11 @@
     </main>
 
     <footer>
-        ©Stock O' CESI, tout droit réservé
-        <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
+        <p>©Stock O' CESI, tout droit réservé</p>
+        <div class="footer-links">
+            <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
+        </div>
     </footer>
+    <script src="../js/burger.js"></script>
 </body>
 </html>
