--- a/static/html/contact.html
+++ b/static/html/contact.html
@@ -10,9 +10,20 @@
 <body>
     <header>
         <div class="header-container">
-            <button class="header-button" onclick="window.location.href='accueil.html'">Retour</button>
+            <div class="logo-container">
+                <img src="../assets/img/logo.png" alt="Logo de Stock O' CESI" class="logo">
+            </div>
             
-            <button class="header-button" onclick="window.location.href='connexion.html'">Connexion</button>
+            <div class="burger-menu">
+                <span class="burger-icon"></span>
+                <nav class="nav-menu">
+                    <ul>
+                        <li><a href="accueil.html">Accueil</a></li>
+                        <li><a href="connexion.html">Connexion</a></li>
+                        <li><a href="#" onclick="history.back()">Retour</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
@@ -47,7 +58,11 @@
     </main>
     
     <footer>
-        <p>©Stock O’ CESI, tout droit réservé</p>
+        <p>©Stock O' CESI, tout droit réservé</p>
+        <div class="footer-links">
+            <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
+        </div>
     </footer>
+    <script src="../js/burger.js"></script>
 </body>
 </html>
