--- a/static/html/creer_compte.html
+++ b/static/html/creer_compte.html
@@ -10,13 +10,26 @@
 <body>
     <header>
         <div class="header-container">
-            <button class="header-button" onclick="window.location.href='gestion.html'">Retour</button>
-            <button class="header-button" onclick="window.location.href='accueil.html'">Accueil</button>
+            <div class="logo-container">
+                <img src="../assets/img/logo.png" alt="Logo de Stock O' CESI" class="logo">
+            </div>
+            
+            <div class="burger-menu">
+                <span class="burger-icon"></span>
+                <nav class="nav-menu">
+                    <ul>
+                        <li><a href="accueil.html">Accueil</a></li>
+                        <li><a href="gerer_comptes.html">Gérer les comptes</a></li>
+                        <li><a href="gestion.html">Retour</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
-        <h1 class="page-title">Créer un compte</h1>
+        
         <form action="#" method="post">
+            <h1 class="page-title">Créer un compte</h1>
             <div>
                 <label for="nom">Nom</label><br>
                 <input type="text" id="nom" name="nom" required>
@@ -56,8 +69,11 @@
         </form>
     </main>
     <footer>
-        <p>©Stock O’ CESI, tout droit réservé</p>
-        <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
+        <p>©Stock O' CESI, tout droit réservé</p>
+        <div class="footer-links">
+            <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
+        </div>
     </footer>
+    <script src="../js/burger.js"></script>
 </body>
 </html>
