--- a/static/html/mentions.html
+++ b/static/html/mentions.html
@@ -9,7 +9,20 @@
 <body>
     <header>
         <div class="header-container">
-            <button class="header-button" onclick="window.location.href='accueil.html'">Accueil</button>
+            <div class="logo-container">
+                <img src="../assets/img/logo.png" alt="Logo de Stock O' CESI" class="logo">
+            </div>
+            
+            <div class="burger-menu">
+                <span class="burger-icon"></span>
+                <nav class="nav-menu">
+                    <ul>
+                        <li><a href="accueil.html">Accueil</a></li>
+                        <li><a href="connexion.html">Connexion</a></li>
+                        <li><a href="#" onclick="history.back()">Retour</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -65,8 +78,12 @@
     </main>
 
     <footer>
-        ©Stock O' CESI, tout droit réservé
-        <button class="contact-link" onclick="window.location.href='index.html'">Retour à l'accueil</button>
+        <p>©Stock O' CESI, tout droit réservé</p>
+        <div class="footer-links">
+            <button class="contact-link" onclick="window.location.href='contact.html'">Nous contacter !</button>
+            <button class="contact-link" onclick="window.location.href='accueil.html'">Retour à l'accueil</button>
+        </div>
     </footer>
+    <script src="../js/burger.js"></script>
 </body>
 </html>
