--- a/static/html/messages.html
+++ b/static/html/messages.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr"></html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +9,25 @@
 </head>
 <body>
     <header>
+        
         <div class="header-container">
+            <div class="logo-container">
+                <img src="../assets/img/logo.png" alt="Logo de Stock O' CESI" class="logo">
+            </div>
             
-            <button class="header-button" onclick="window.location.href='gestion.html'">Retour</button>
-            <button class="header-button" onclick="window.location.href='accueil.html'">Accueil</button>
+            <h1>Gestionnaire</h1>
+            <div class="burger-menu">
+                <span class="burger-icon"></span>
+                <nav class="nav-menu">
+                    <ul>
+                        <li><a href="accueil.html">Accueil</a></li>
+                        <li><a href="creer_compte.html">Créer un compte</a></li>
+                        <li><a href="gerer_comptes.html">Gérer les comptes</a></li>
+                        <li><a href="ajouter_magasin.html">Ajouter un magasin</a></li>
+                        <li><a href="gerer_magasins.html">Gérer les magasins</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -23,6 +38,12 @@
     </main>
 
     <footer>
-        ©Stock O' CESI, tout droit réservé
-        <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
+        <p>©Stock O' CESI, tout droit réservé</p>
+        <div class="footer-links">
+            <button class="contact-link" onclick="window.location.href='contact.html'">Nous contacter !</button>
+            <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
+        </div>
     </footer>
+    <script src="../js/burger.js"></script>
+</body>
+</html>
