new file:   bdd/database.sql 	new file:   static/assets/img/6488674.png 	modified:   static/css/accueil.css 	new file:   static/css/ajout_stock.css 	modified:   static/css/connexion.css 	modified:   static/css/contact.css 	new file:   static/css/deconnexion.css 	modified:   static/css/gerer_compte.css 	modified:   static/css/gerer_magasins.css     modified:   static/css/main.css     new file:   static/css/stock.css     modified:   static/html/accueil.html     new file:   static/html/ajout_stock.html     modified:   static/html/ajouter_magasin.html     modified:   static/html/connexion.html     modified:   static/html/contact.html     new file:   static/html/deconnexion.html     modified:   static/html/gerer_comptes.html     modified:   static/html/gerer_magasins.html     modified:   static/html/gestion.html     new file:   static/html/journal_actions.html     new file:   static/html/stock.html

--- a/static/html/gerer_magasins.html
+++ b/static/html/gerer_magasins.html
@@ -27,12 +27,13 @@
             </div>
         </div>
     </header>
+
     <!-- Main Content -->
     <main>
         <div class="search-bar">
             <input type="text" placeholder="Rechercher" class="search-input">
             <button class="filter-button">
-                <img src="../assets/img/filter-icon.svg" alt="Filtrer">
+                <img src="../assets/img/filter.png" alt="Filtrer">
             </button>
         </div>
 
@@ -68,10 +69,11 @@
     <footer>
         <p>©Stock O' CESI, tout droit réservé</p>
         <div class="footer-links">
+            <button class="contact-link" onclick="window.location.href='contact.html'">Nous contacter !</button>
             <button class="contact-link" onclick="window.location.href='mentions.html'">Mentions légales</button>
         </div>
     </footer>
 
     <script src="../js/burger.js"></script>
 </body>
-</html> 
+</html>
