--- a/static/html/gestion.html
+++ b/static/html/gestion.html
@@ -25,6 +25,8 @@
                         <li><a href="gerer_comptes.html">Gérer les comptes</a></li>
                         <li><a href="ajouter_magasin.html">Ajouter un magasin</a></li>
                         <li><a href="gerer_magasins.html">Gérer les magasins</a></li>
+                        <li><a href="messages.html">Messages</a></li>
+                        <li><a href="deconnexion.html">Déconnexion</a></li>
                     </ul>
                 </nav>
             </div>
