--- a/static/html/stock.html
+++ b/static/html/stock.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gestion des comptes - Stock O' CESI</title>
-        <link rel="stylesheet" href="../css/gerer_compte.css">
+        <title>Gestion des stocks - Stock O' CESI</title>
+        <link rel="stylesheet" href="../css/stock.css">
         <link rel="stylesheet" href="../css/main.css">
     </head>
 <body>
@@ -14,13 +14,13 @@
             <div class="logo-container">
                 <img src="../assets/img/logo.png" alt="Logo de Stock O' CESI" class="logo">
             </div>
-            <h1>Gestion des comptes</h1>
+            <h1>Gestion des stocks</h1>
             <div class="burger-menu">
                 <span class="burger-icon"></span>
                 <nav class="nav-menu">
                     <ul>
                         <li><a href="accueil.html">Accueil</a></li>
-                        <li><a href="ajouter_compte.html">Ajouter un compte</a></li>
+                        <li><a href="ajout_stock.html">Ajouter un produit</a></li>
                         <li><a href="#" onclick="history.back()">Retour</a></li>
                     </ul>
                 </nav>
@@ -31,27 +31,35 @@
     <!-- Main Content -->
     <main>
         <div class="search-bar">
-            <input type="text" placeholder="Rechercher un compte" class="search-input">
+            <input type="text" placeholder="Rechercher un produit" class="search-input">
             <button class="filter-button">
-                <img src="../assets/img/filter.png" alt="Filtrer">
+                <img src="../assets/img/filter-icon.svg" alt="Filtrer">
             </button>
         </div>
-
-        <div class="account-list">
-            <div class="account-item">
-                <span><strong>John Doe</strong> - Administrateur - JD123</span>
+        <div class="add-product-container">
+            <button class="add-product-button" onclick="window.location.href='ajout_stock.html'">Ajouter un produit</button>
+        </div>
+        <div class="stock-list">
+            <div class="stock-item">
+                <span><strong>Produit :</strong> Nike Air Max</span>
+                <span><strong>Quantité :</strong> 50</span>
+                <span><strong>Prix :</strong> 120.00 €</span>
                 <button class="delete-button">
                     <img src="../assets/img/poubelle.jpg" alt="Supprimer">
                 </button>
             </div>
-            <div class="account-item">
-                <span><strong>Jane Smith</strong> - Utilisateur - JS456</span>
+            <div class="stock-item">
+                <span><strong>Produit :</strong> Samsung Galaxy S21</span>
+                <span><strong>Quantité :</strong> 30</span>
+                <span><strong>Prix :</strong> 799.99 €</span>
                 <button class="delete-button">
                     <img src="../assets/img/poubelle.jpg" alt="Supprimer">
                 </button>
             </div>
-            <div class="account-item">
-                <span><strong>Paul Dupont</strong> - Manager - PD789</span>
+            <div class="stock-item">
+                <span><strong>Produit :</strong> MacBook Pro</span>
+                <span><strong>Quantité :</strong> 15</span>
+                <span><strong>Prix :</strong> 2499.00 €</span>
                 <button class="delete-button">
                     <img src="../assets/img/poubelle.jpg" alt="Supprimer">
                 </button>
