--- a/static/html/stock.html
+++ b/static/html/stock.html
@@ -33,7 +33,7 @@
         <div class="search-bar">
             <input type="text" placeholder="Rechercher un produit" class="search-input">
             <button class="filter-button">
-                <img src="../assets/img/filter-icon.svg" alt="Filtrer">
+                <img src="../assets/img/filter.png" alt="Filtrer">
             </button>
         </div>
         <div class="add-product-container">
